0.02
 - Update copyright years.

0.01 2022-09-10T12:26:44+02:00
 - First version.