@@ -1,4 +1,5 @@
 0.02
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.01 2022-09-10T12:26:44+02:00
